# IX-PackHunt-Guard

./: CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  REPOSITORY_DETAILS.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: THREAT_MODEL.md
examples/: safe_gateway_demo.py
src/ix_packhunt_guard/: __init__.py  _hashing.py  classifier.py  detector.py  exporters.py  graph.py  identity.py  schema.py
tests/: test_classifier.py  test_detector.py  test_exporters.py  test_identity.py
