[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ix-packhunt-guard"
version = "0.1.0"
description = "Governed coordination layer for detecting prompt-decomposition and coordinated AI abuse patterns."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Source-Available Evaluation License"}
authors = [{name = "Bryce Lovell"}]
keywords = [
  "ai-safety",
  "ai-governance",
  "abuse-detection",
  "prompt-decomposition",
  "human-in-the-loop",
  "auditability",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "mypy>=1.10", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
